# projecto-final-pongmasters

./: .gitignore  CMakeLists.txt  README.md  nn_dense.h  nn_interfaces.h  nn_optimizer.h
docs/: README.md
include/utec/: neural_network.h  nn_activation.h  nn_loss.h
include/utec/agent/: EnvGym.h  PongAgent.h  State.h
include/utec/algebra/: tensor.h
include/utec/nn/: activation.h  dense.h  interfaces.h  loss.h  neural_network.h  nn_activation.h  optimizer.h
src/gameplay/: main__game.cpp
src/utec/agent/: train_agent.cpp
src/utec/ui/: display.cpp
tests/: test_agent_env.cpp
